Alterações na página de links

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="">
+<html lang="pt-br" class="light">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,14 +18,14 @@
         <img src="./assets/avatarDarkMode.png" alt="Foto de Perfil" />
         <p>@pulsecreatives</p>
       </div>
-      <div class="" id="switch" onclick="toogleMode()">
+      <div class="" id="switch" onclick="toggleMode()">
         <button></button>
         <span></span>
       </div>
 
       <ul>
         <li><a href="https://wa.me/5581993841297" target="_blank">WhatsApp</a></li>
-        <li><a href="./pages/src/portifolio/index.html" >Portifólio</a></li>
+        <li><a href="https://wa.me/5581993841297" >Portifólio(Em Breve)</a></li>
         <li><a href="#" target="_blank">Um pouco sobre nós (Em breve)</a></li>
         <!--<li><a href="#" target="_blank">Conhecer</a></li>-->
       </ul>
@@ -56,6 +56,6 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
